refactor(mentor): replace toList method